<resources>
    <string name="app_name">Clinic</string>
    <string name="enter">Вход</string>
    <string name="username">Логин:</string>
    <string name="promt_username">Введите логин</string>
    <string name="password">Пароль:</string>
    <string name="promt_password">Введите пароль</string>
    <string name="next">Далее</string>
    <string name="sign_up">Регистрация</string>
    <string name="buttonWriteToDoctorText">Записаться ко врачу</string>
    <string name="register">Регистрация</string>
    <string name="done">Готово</string>
    <string name="retype_password">Повторите пароль</string>
    <string name="type_password">Введите пароль</string>
    <string name="name">Имя</string>
    <string name="promt_name">Введите имя</string>
    <string name="surname">Фамилия</string>
    <string name="promt_surname">Введите фамилию</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_timetable">Мое расписание</string>
    <string name="menu_my_account">Мой аккаунт</string>
    <string name="menu_messages">Сообщения</string>
    <string name="next_day">Следующий день</string>
    <string name="prev_day">Предыдущий день</string>
</resources>